book now button not visible problem fixed

--- a/frontend/src/components/heroSection/HeroSection.module.css
+++ b/frontend/src/components/heroSection/HeroSection.module.css
@@ -164,6 +164,7 @@ margin-left: 20px;
     cursor: pointer;
     border: none;
     font-weight: 200;
+    background-color: white;
 }
 .imageChanger{
     display: flex;
